package edu.hitsz.aircraft.props;

public class BulletProp extends AbstractProp{
    public BulletProp(int locationX, int locationY, int speedX, double speedY, int category) {
        super(locationX, locationY, speedX, speedY, category);
    }
}
